Add Google auth, dashboard redirect, and voice generation webhook.

--- a/BloggoFrontend/pages/forgot-password.html
+++ b/BloggoFrontend/pages/forgot-password.html
@@ -62,28 +62,29 @@
     </div>
 </div>
 
-
 <script>
     document.getElementById("forgotForm").addEventListener("submit", async (e) => {
         e.preventDefault();
-
-        const email = document.getElementById("email").value;
+        const email = document.getElementById("email").value.trim();
+        if (!email) return alert("Please enter a valid email.");
 
         try {
             const response = await fetch("http://localhost:8080/auth/forgot-password", {
                 method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({ email }),
-                credentials: "include" // allow cookies if needed
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ email })
             });
 
+            if (!response.ok) {
+                const errorText = await response.text();
+                return alert(`Error: ${errorText}`);
+            }
+
             const result = await response.text();
-            alert(result);
+            alert(result + "\nCheck your email for the reset link.");
         } catch (err) {
             console.error(err);
-            alert("Something went wrong.");
+            alert("Something went wrong. Please try again.");
         }
     });
 </script>
