--- a/BloggoFrontend/pages/reset-password.html
+++ b/BloggoFrontend/pages/reset-password.html
@@ -1,119 +1,80 @@
-<!-- Bloggo-frontend/reset-password.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Password</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 400px;
-            margin: 50px auto;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            background-color: #f9f9f9;
-        }
-        h2 {
-            text-align: center;
-        }
-        input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-        button {
-            width: 100%;
-            padding: 10px;
-            background-color: #FF6F61;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:disabled {
-            background-color: #ccc;
-        }
-        #message {
-            text-align: center;
-            margin-top: 15px;
-            font-weight: bold;
-        }
-        #message.success {
-            color: green;
-        }
-        #message.error {
-            color: red;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/signing.css">
 </head>
 <body>
-<h2>Reset Your Password</h2>
-<input id="newPassword" type="password" placeholder="New password" />
-<input id="confirmPassword" type="password" placeholder="Confirm password" />
-<button id="resetBtn">Reset Password</button>
-<p id="message"></p>
+<div class="header">
+    <div class="container d-flex justify-content-between align-items-center">
+        <a class="navbar-brand" href="#" aria-label="Bloggo Home">BLOGGO</a>
+        <div>
+            <a href="signup.html" class="btn">Sign up</a>
+            <a href="../index.html" class="btn" id="btn-home">Home</a>
+        </div>
+    </div>
+</div>
 
+<div class="main-container">
+    <div class="form-section">
+        <div class="auth-container">
+            <div class="auth-header">
+                <h1>Reset Password</h1>
+                <p>Enter your new password below.</p>
+            </div>
+
+            <form id="resetForm">
+                <div class="form-group mb-3">
+                    <input type="password" class="form-control" id="newPassword" placeholder="New Password" required>
+                </div>
+                <div class="form-group mb-4">
+                    <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password" required>
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Reset Password</button>
+            </form>
+        </div>
+    </div>
+</div>
 
 <script>
-    const btn = document.getElementById('resetBtn');
-    const message = document.getElementById('message');
-
-    // ✅ Get the token from the URL
-    const params = new URLSearchParams(window.location.search);
-    const token = params.get("token");
-    console.log("Reset token:", token);
-
-    btn.addEventListener('click', async () => {
-        const newPassword = document.getElementById('newPassword').value;
-        const confirmPassword = document.getElementById('confirmPassword').value;
-
-        if (newPassword !== confirmPassword) {
-            message.innerText = "Passwords do not match.";
-            message.className = "error";
-            return;
-        }
-
+    document.addEventListener("DOMContentLoaded", () => {
+        const token = new URLSearchParams(window.location.search).get("token");
         if (!token) {
-            message.innerText = "Invalid or missing reset token.";
-            message.className = "error";
-            return;
+            alert("Invalid or missing token.");
+            window.location.href = "forgot-password.html";
         }
 
-        btn.disabled = true;
-        btn.innerText = "Resetting...";
+        document.getElementById("resetForm").addEventListener("submit", async (e) => {
+            e.preventDefault();
+            const newPassword = document.getElementById("newPassword").value.trim();
+            const confirmPassword = document.getElementById("confirmPassword").value.trim();
 
-        try {
-            // ✅ Send the token in the POST body
-            const res = await fetch('http://localhost:8080/auth/reset-password', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ newPassword, token })
-            });
+            if (!newPassword || !confirmPassword) return alert("Please fill in all fields.");
+            if (newPassword !== confirmPassword) return alert("Passwords do not match.");
 
-            const msg = await res.text();
+            try {
+                const response = await fetch("http://localhost:8080/auth/reset-password", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ token, newPassword })
+                });
 
-            if (res.ok) {
-                message.innerText = msg;
-                message.className = 'success';
-                setTimeout(() => window.location.href = 'login.html', 2500);
-            } else {
-                message.innerText = msg;
-                message.className = 'error';
-                btn.disabled = false;
-                btn.innerText = 'Reset Password';
+                const result = await response.text();
+                if (response.ok) {
+                    alert("Password reset successfully! You can now sign in.");
+                    window.location.href = "signing.html";
+                } else {
+                    alert("Error: " + result);
+                }
+            } catch (err) {
+                console.error(err);
+                alert("Something went wrong. Please try again.");
             }
-
-        } catch (err) {
-            message.innerText = 'Error resetting password.';
-            message.className = 'error';
-            btn.disabled = false;
-            btn.innerText = 'Reset Password';
-        }
+        });
     });
 </script>
-
 </body>
 </html>
