Add SweetAlert2 for feedback messages.

--- a/BloggoFrontend/pages/admin-settings.html
+++ b/BloggoFrontend/pages/admin-settings.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../css/admin-dashboard.css">
 
+    <!-- SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+
+
+
     <style>
         body {     background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
         }
@@ -87,5 +93,8 @@
         </main>
     </div>
 </div>
+
+<!-- SweetAlert2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
