--- a/BloggoFrontend/pages/about-bloggo.html
+++ b/BloggoFrontend/pages/about-bloggo.html
@@ -12,6 +12,12 @@
 
     <link rel="stylesheet" href="../css/about-bloggo.css">
 
+    <!-- SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+
+
+
 </head>
 <body>
 
@@ -123,5 +129,7 @@
     &copy; 2025 Bloggo. All rights reserved.
 </footer>
 
+<!-- SweetAlert2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
