--- a/BloggoFrontend/pages/follow.html
+++ b/BloggoFrontend/pages/follow.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <link href="../css/follow.css" rel="stylesheet">
+
+    <!-- SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+
+
 </head>
 <body>
 <header class="sticky-top">
@@ -183,6 +189,9 @@
         </div>
     </div>
 </div>
+
+<!-- SweetAlert2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script src="../js/follow.js"></script>
 <script src="../js/profile.js"></script>
