--- a/BloggoFrontend/pages/forgot-password.html
+++ b/BloggoFrontend/pages/forgot-password.html
@@ -6,6 +6,12 @@
     <title>Forgot Password</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
    <link rel="stylesheet" href="../css/signing.css">
+
+    <!-- SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+
+
 </head>
 <body >
 <!-- Header -->
@@ -61,7 +67,8 @@
         </div>
     </div>
 </div>
-
+<!-- SweetAlert2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
     document.getElementById("forgotForm").addEventListener("submit", async (e) => {
         e.preventDefault();
