--- a/BloggoFrontend/pages/logout.html
+++ b/BloggoFrontend/pages/logout.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <link rel="stylesheet" href="../css/logout.css">
+
+    <!-- SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+
+
 </head>
 <body>
 
@@ -21,7 +27,8 @@
         <i class="fa-solid fa-right-to-bracket"></i> Go to Login
     </a>
 </div>
-
+<!-- SweetAlert2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script>
     document.addEventListener("DOMContentLoaded", () => {
