--- a/BloggoFrontend/pages/membership.html
+++ b/BloggoFrontend/pages/membership.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <link href="../css/membership.css" rel="stylesheet" />
+
+    <!-- SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+
+
 </head>
 <body>
 <!-- Navbar -->
@@ -125,6 +131,9 @@
 <div class="container text-center mb-5">
     <p class="text-muted">Secure checkout process — your data is protected 🔒</p>
 </div>
+
+<!-- SweetAlert2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script src="../js/conformation.js"></script>
