--- a/BloggoFrontend/pages/saved-bookmarks.html
+++ b/BloggoFrontend/pages/saved-bookmarks.html
@@ -11,6 +11,12 @@
 
     <link href="../css/bookmark.css" rel="stylesheet">
 
+    <!-- SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+
+
+
 </head>
 <body>
 <header class="sticky-top">
@@ -156,6 +162,10 @@
         </div>
     </div>
 </div>
+
+<!-- SweetAlert2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <!-- Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../js/profile.js"></script>
