--- a/BloggoFrontend/pages/settings.html
+++ b/BloggoFrontend/pages/settings.html
@@ -14,6 +14,10 @@
     <!-- Cropper.js CSS -->
     <link rel="stylesheet" href="https://unpkg.com/cropperjs@next/dist/cropper.min.css">
 
+    <!-- SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+
 
 
     <link rel="stylesheet" href="../css/settings.css">
@@ -186,6 +190,10 @@
         </section>
     </div>
 </div>
+
+
+<!-- SweetAlert2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
 <!-- Cropper.js JS -->
