--- a/BloggoFrontend/pages/signup.html
+++ b/BloggoFrontend/pages/signup.html
@@ -14,6 +14,11 @@
 
     <link href="../css/signup.css" rel="stylesheet">
 
+    <!-- SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+
+
 </head>
 <body>
 
@@ -98,6 +103,10 @@
         </div>
     </div>
 </main>
+
+<!-- SweetAlert2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 
 <!-- Bootstrap JS Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
