--- a/BloggoFrontend/pages/user-management.html
+++ b/BloggoFrontend/pages/user-management.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../css/admin-dashboard.css">
 
+  <!-- SweetAlert2 CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+
+
+
 </head>
 <body>
 
@@ -72,6 +78,8 @@
     </main>
   </div>
 </div>
+<!-- SweetAlert2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="../js/user-management.js"></script>
 </body>
 </html>
