Updated summary generation endpoint and related services.

--- a/BloggoFrontend/pages/story-detail.html
+++ b/BloggoFrontend/pages/story-detail.html
@@ -108,7 +108,9 @@
                                 <i class="fas fa-file-pdf"></i> Download PDF
                             </button>
 
-                            <button id="listen-btn">🔊 Listen to this post</button>
+                            <button id="listen-btn">
+                                <i class="fa-solid fa-volume-high" style="color: black;"></i> Listen to this post
+                            </button>
 
                         </div>
                     </div>
