Updated user and summary endpoints, and related services and also refactor all the unused classes,codes reduce repeative codes

--- a/BloggoFrontend/pages/forgot-password.html
+++ b/BloggoFrontend/pages/forgot-password.html
@@ -68,32 +68,9 @@
     </div>
 </div>
 <!-- SweetAlert2 JS -->
+<!-- Include SweetAlert2 -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script>
-    document.getElementById("forgotForm").addEventListener("submit", async (e) => {
-        e.preventDefault();
-        const email = document.getElementById("email").value.trim();
-        if (!email) return alert("Please enter a valid email.");
 
-        try {
-            const response = await fetch("http://localhost:8080/auth/forgot-password", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ email })
-            });
-
-            if (!response.ok) {
-                const errorText = await response.text();
-                return alert(`Error: ${errorText}`);
-            }
-
-            const result = await response.text();
-            alert(result + "\nCheck your email for the reset link.");
-        } catch (err) {
-            console.error(err);
-            alert("Something went wrong. Please try again.");
-        }
-    });
-</script>
+<script src="../js/forgot-password.js"></script>
 </body>
 </html>
