--- a/BloggoFrontend/pages/membership.html
+++ b/BloggoFrontend/pages/membership.html
@@ -129,7 +129,7 @@
 </div>
 
 <div class="container text-center mb-5">
-    <p class="text-muted">Secure checkout process — your data is protected 🔒</p>
+    <p class="text-muted">Secure checkout process — your data is protected </p>
 </div>
 
 <!-- SweetAlert2 JS -->
