--- a/BloggoFrontend/index.html
+++ b/BloggoFrontend/index.html
@@ -17,270 +17,8 @@
     <!-- SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 
+    <link rel="stylesheet" href="css/main.css">
 
-
-    <style>
-        :root {
-            /* Colors */
-            --primary: #000000;           /* Black */
-            --primary-hover: #222222;     /* Dark Gray on hover */
-            --muted: #6b7280;             /* Gray for secondary text */
-            --light: #f8f8f8;             /* Light gray background */
-            --dark: #1f2937;              /* Dark gray text */
-            --border: #e5e5e5;            /* Light border */
-            --shadow: 0 10px 30px rgba(0,0,0,0.08);
-            --radius: 16px;
-            --white: #ffffff;
-        }
-
-        /* Body */
-        body {
-            font-family: 'Inter', sans-serif;
-            color: var(--dark);
-            line-height: 1.6;
-            background: var(--white);
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
-
-        /* Header */
-        header {
-            background: var(--white);
-            border-bottom: 1px solid var(--border);
-            backdrop-filter: saturate(180%) blur(12px);
-        }
-
-        .navbar-brand{
-            font-weight: 700;
-            font-size: 1.5rem;
-            color: #000000;
-            letter-spacing: 2px;
-            margin-right: 2rem;
-            user-select: none;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            padding-top: 5px;
-            padding-bottom: 5px;
-        }
-
-        .brand-logo {
-            height: 40px;
-            width: auto;
-        }
-
-        .navbar-nav .nav-link {
-            font-weight: 500;
-            color: var(--dark);
-            transition: color 0.3s;
-        }
-
-        .navbar-nav .nav-link:hover {
-            color: var(--primary-hover);
-        }
-
-        /* Hero Section */
-        .hero {
-            padding: 3rem 0;
-        }
-
-        .hero-card {
-            background: var(--white);
-            border: 1px solid var(--border);
-            padding: 1rem;
-            border-radius: var(--radius);
-            box-shadow: var(--shadow);
-            max-width: 700px;
-        }
-
-        .display-4 {
-            font-family: 'Lora', serif;
-            font-weight: 700;
-            color: var(--dark);
-        }
-
-        .hero-image img {
-            box-shadow: var(--shadow);
-        }
-
-        /* OAuth Buttons */
-        .oauth-btn {
-            width: 60px;
-            height: 60px;
-            border: 2px solid var(--border);
-            border-radius: 50%;
-            background: var(--white);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.2rem;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            padding: 0;
-        }
-
-        .oauth-btn img {
-            width: 28px;
-            height: 28px;
-        }
-
-        .oauth-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: var(--shadow);
-        }
-
-        /* Carousel */
-        .carousel-img {
-            height: 400px;
-            object-fit: cover;
-            filter: grayscale(20%);
-        }
-
-        .carousel-caption {
-            background: rgba(0, 0, 0, 0.6);
-            border-radius: 8px;
-            padding: 1rem;
-            bottom: 2rem;
-            left: 2rem;
-            right: 2rem;
-            color: var(--white);
-        }
-
-        /* Category Cards */
-        .cat-card {
-            background: var(--white);
-            border: 1px solid var(--border);
-            border-radius: var(--radius);
-            overflow: hidden;
-            transition: all 0.3s ease;
-            box-shadow: var(--shadow);
-        }
-
-        .cat-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 15px 40px rgba(0,0,0,0.12);
-        }
-
-        .cat-thumb {
-            height: 180px;
-            overflow: hidden;
-        }
-
-        .cat-thumb img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: transform 0.5s ease;
-            filter: grayscale(10%);
-        }
-
-        .cat-card:hover .cat-thumb img {
-            transform: scale(1.05);
-        }
-
-        .cat-body {
-            padding: 1.25rem;
-            color: var(--dark);
-        }
-
-        /* Buttons */
-        .btn {
-            font-weight: 500;
-            border-radius: var(--radius);
-            transition: all 0.3s ease;
-            border: 1px solid var(--border);
-            background: var(--white);
-            color: var(--dark);
-            padding: 10px 24px;
-        }
-
-        .btn:hover {
-            background: var(--primary-hover);
-            color: var(--white);
-            transform: translateY(-2px);
-            box-shadow: var(--shadow);
-        }
-
-        /* Footer */
-        footer {
-            background: var(--primary);
-            margin-top: auto;
-            border-top: 1px solid var(--border);
-            color: var(--white);
-            padding: 1.5rem 0;
-            text-align: center;
-        }
-
-        /* Utilities */
-        .rounded-4 {
-            border-radius: var(--radius);
-        }
-
-        /* Animations */
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        .hero, .section {
-            animation: fadeIn 0.8s ease-out;
-        }
-
-        .section:nth-child(2) {
-            animation-delay: 0.2s;
-        }
-
-        .section:nth-child(3) {
-            animation-delay: 0.4s;
-        }
-
-        /* Responsive adjustments */
-        @media (max-width: 768px) {
-            .hero {
-                padding: 2rem 0;
-            }
-
-            .display-4 {
-                font-size: 2.2rem;
-            }
-
-            .carousel-img {
-                height: 300px;
-            }
-
-            .carousel-caption {
-                bottom: 1rem;
-                left: 1rem;
-                right: 1rem;
-                padding: 0.75rem;
-            }
-
-            .carousel-caption h3 {
-                font-size: 1.1rem;
-                margin-bottom: 0.25rem;
-            }
-
-            .carousel-caption p {
-                font-size: 0.9rem;
-                margin-bottom: 0;
-            }
-        }
-
-        @media (max-width: 576px) {
-            .hero-cta {
-                flex-direction: column;
-            }
-
-            .hero-cta .btn {
-                width: 100%;
-                margin-bottom: 0.5rem;
-            }
-
-            .cat-thumb {
-                height: 150px;
-            }
-        }
-
-    </style>
 </head>
 <body>
 <!-- Header -->
@@ -495,46 +233,6 @@
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Custom JS -->
-<script>
-    // Set current year
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    // Add smooth scrolling for anchor links
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function (e) {
-            e.preventDefault();
-            const target = document.querySelector(this.getAttribute('href'));
-            if (target) {
-                target.scrollIntoView({
-                    behavior: 'smooth',
-                    block: 'start'
-                });
-            }
-        });
-    });
-
-    // Add intersection observer for animations
-    const observerOptions = {
-        threshold: 0.1,
-        rootMargin: '0px 0px -50px 0px'
-    };
-
-    const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-            if (entry.isIntersecting) {
-                entry.target.style.opacity = '1';
-                entry.target.style.transform = 'translateY(0)';
-            }
-        });
-    }, observerOptions);
-
-    // Observe category cards
-    document.querySelectorAll('.cat-card').forEach(card => {
-        card.style.opacity = '0';
-        card.style.transform = 'translateY(30px)';
-        card.style.transition = 'opacity 0.6s ease, transform 0.6s ease';
-        observer.observe(card);
-    });
-</script>
+<script src="js/main.js"></script>
 </body>
 </html>
