--- a/BloggoFrontend/pages/reset-password.html
+++ b/BloggoFrontend/pages/reset-password.html
@@ -10,8 +10,6 @@
     <!-- SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 
-
-
 </head>
 <body>
 <div class="header">
@@ -45,45 +43,10 @@
     </div>
 </div>
 
-<!-- SweetAlert2 JS -->
+<<!-- Include SweetAlert2 -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-<script>
-    document.addEventListener("DOMContentLoaded", () => {
-        const token = new URLSearchParams(window.location.search).get("token");
-        if (!token) {
-            alert("Invalid or missing token.");
-            window.location.href = "forgot-password.html";
-        }
+<script src="../js/reset-password.js"></script>
 
-        document.getElementById("resetForm").addEventListener("submit", async (e) => {
-            e.preventDefault();
-            const newPassword = document.getElementById("newPassword").value.trim();
-            const confirmPassword = document.getElementById("confirmPassword").value.trim();
-
-            if (!newPassword || !confirmPassword) return alert("Please fill in all fields.");
-            if (newPassword !== confirmPassword) return alert("Passwords do not match.");
-
-            try {
-                const response = await fetch("http://localhost:8080/auth/reset-password", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ token, newPassword })
-                });
-
-                const result = await response.text();
-                if (response.ok) {
-                    alert("Password reset successfully! You can now sign in.");
-                    window.location.href = "signing.html";
-                } else {
-                    alert("Error: " + result);
-                }
-            } catch (err) {
-                console.error(err);
-                alert("Something went wrong. Please try again.");
-            }
-        });
-    });
-</script>
 </body>
 </html>
