Added member wallet balance table to admin dashboard.

--- a/BloggoFrontend/pages/admin-action.html
+++ b/BloggoFrontend/pages/admin-action.html
@@ -11,6 +11,19 @@
 
     <link href="../css/admin-dashboard.css" rel="stylesheet">
 
+    <!--<style>
+        .glass-navbar { position: sticky; top: 1rem; z-index: 1050; display: flex; justify-content: space-between; padding: 1rem 2rem; margin: 0 auto; width: 60%; border-radius: 20px; margin-top: 1rem; margin-bottom: 2rem; background: rgba(255, 255, 255, 0.15); backdrop-filter: blur(16px) saturate(180%); -webkit-backdrop-filter: blur(16px) saturate(180%); border: 1px solid rgba(255, 255, 255, 0.3); box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); }
+        .glass-navbar a { color: #000000; font-weight: 500; margin: 0 1.2rem; text-decoration: none; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 12px; }
+        .glass-navbar a:hover { background: rgba(255, 255, 255, 0.2); transform: translateY(-2px); }
+        .navbar-brand{ font-weight: 700; font-size: 1.5rem; color: #131212; letter-spacing: 2px; margin-right: 2rem; user-select: none; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+        .table-card { background: #fff; border-radius: 12px; padding: 1rem; box-shadow: 0 2px 6px rgba(0,0,0,0.05); margin-bottom: 2rem; }
+        .avatar { width: 36px; height: 36px; border-radius: 50%; object-fit: cover; }
+        .profile-menu .dropdown-menu { border-radius: 12px; box-shadow: 0 8px 24px rgba(0,0,0,0.1); }
+        .sidebar { height: 100vh; position: sticky; top: 60px; background: #f8f9fa; border-right: 1px solid #dee2e6; padding-top: 20px; }
+        .sidebar a { display: block; padding: 12px 15px; color: #333; text-decoration: none; margin: 5px 0; border-radius: 8px; font-weight: 500; }
+        .sidebar a:hover, .sidebar a.active { background: #0d6efd; color: white; }
+    </style>-->
+
     <!-- SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 
@@ -48,16 +61,16 @@
 </header>
 
 <div class=" ">
-    <div class="row">
+    <div class=" row ">
         <!-- 📌 Sidebar -->
-        <aside class="col-lg-1 col-md-2 pt-8 sidebar">
+        <aside class="col-lg-2 col-md-3 sidebar">
             <a href="admin-action.html" class="active"><i class="fas fa-tachometer-alt me-2"></i> Dashboard</a>
             <a href="user-management.html"><i class="fas fa-users me-2"></i> Manage Users</a>
             <a href="post-management.html"><i class="fas fa-blog me-2"></i> Manage Posts</a>
         </aside>
 
         <!-- 📌 Main Content -->
-        <main class="col-lg-10 col-md-6 mt-4">
+        <main class="col-lg-10 col-md-9 mt-4">
             <h2 class="mb-4">Admin Dashboard</h2>
 
             <!-- Stats -->
