--- a/BloggoFrontend/pages/story-detail.html
+++ b/BloggoFrontend/pages/story-detail.html
@@ -183,7 +183,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">✏️ Edit Story</h5>
+                <h5 class="modal-title"> Edit Story</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
