Added profile image popup, improved error handling, and account ban feature.

--- a/BloggoFrontend/pages/follow.html
+++ b/BloggoFrontend/pages/follow.html
@@ -103,24 +103,14 @@
                 <!-- Following Tab -->
                 <div class="tab-pane fade show active" id="following">
                     <div class="user-card">
-                        <h6>@john_doe</h6>
-                        <p>Full-stack developer · 120 posts</p>
-                    </div>
-                    <div class="user-card">
-                        <h6>@susan_writer</h6>
-                        <p>Content creator · 45 posts</p>
+                        <p>loading users...</p>
                     </div>
                 </div>
 
                 <!-- Followers Tab -->
                 <div class="tab-pane fade" id="followers" >
                     <div class="user-card">
-                        <h6>@alex_reader</h6>
-                        <p>Loves tech blogs · 10 comments</p>
-                    </div>
-                    <div class="user-card">
-                        <h6>@maria_dev</h6>
-                        <p>Frontend engineer · 32 posts</p>
+                        <p>loading users...</p>
                     </div>
                 </div>
             </div>
@@ -133,16 +123,16 @@
                 <img  class="profile-avatar mb-2" alt="Avatar">
 
                 <div class="d-flex align-items-center justify-content-center gap-2 mb-2">
-                    <h4 class="profile-name m-0">Sasuniwijerathne</h4>
+                    <h4 class="profile-name m-0">Loading...</h4>
                     <small class="text-muted">she/her</small>
                 </div>
 
                 <p>
-                    <a href="follow.html" class="text-decoration-none fw-semibold">71 Followers</a>
+                    <a href="follow.html" class="text-decoration-none fw-semibold">Loading Followers...</a>
                 </p>
 
                 <p class="profile-bio">
-                    Just a 21+ girl navigating life with passion and purpose! ✨
+                    Loading bio...
                 </p>
 
                <!-- &lt;!&ndash; Wallet & Earnings Inline &ndash;&gt;
