--- a/BloggoFrontend/pages/membership.html
+++ b/BloggoFrontend/pages/membership.html
@@ -95,7 +95,7 @@
                     <li>✔ Community support</li>
                     <li>✖ Limited customization</li>
                 </ul>
-                <a href="profile.html" class="btn btn-plan">Get Started</a>
+                <a href="stories.html" class="btn btn-plan">Get Started</a>
             </div>
         </div>
 
