Replaced placeholder user names with "Loading..." in multiple HTML files.

--- a/BloggoFrontend/pages/notification.html
+++ b/BloggoFrontend/pages/notification.html
@@ -142,18 +142,18 @@
                 <ul class="list-unstyled following-list mb-0">
                     <li class="d-flex align-items-center mb-2">
                         <img  class="rounded-circle me-2" alt="">
-                        <span>test1</span>
+                        <span></span>
                     </li>
                     <li class="d-flex align-items-center mb-2">
                         <img  class="rounded-circle me-2" alt="">
-                        <span>test2</span>
+                        <span></span>
                     </li>
                     <li class="d-flex align-items-center mb-2">
                         <img  class="rounded-circle me-2" alt="">
-                        <span>test3</span>
+                        <span></span>
                     </li>
                     <li>
-                        <a href="follow.html" class="text-decoration-none">See all (12)</a>
+                        <a href="follow.html" class="text-decoration-none">Loading...</a>
                     </li>
                 </ul>
             </div>
