--- a/BloggoFrontend/pages/post-management.html
+++ b/BloggoFrontend/pages/post-management.html
@@ -80,6 +80,7 @@
                 </div>
                 <div class="card-body">
                     <div class="row g-3" id="postContainer">
+                        Loading...
                         <!-- Posts will be dynamically loaded here -->
                     </div>
 
