--- a/BloggoFrontend/pages/members-profile.html
+++ b/BloggoFrontend/pages/members-profile.html
@@ -96,8 +96,11 @@
         <img  class="profile-avatar mb-2" alt="Avatar">
 
         <div class="d-flex align-items-center justify-content-center gap-2 mb-2">
+          <span id="profile-status-dot"
+                style="width:12px; height:12px; border-radius:50%; display:inline-block;"></span>
           <h4 class="profile-name m-0"></h4>
           <small class="text-muted"></small>
+
         </div>
 
         <p>
@@ -123,11 +126,15 @@
     </div>
   </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1.5.1/dist/sockjs.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 
 <!-- SweetAlert2 JS -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../js/members-profile.js"></script>
+<script src="../js/webSocket.js"></script>
+
 </body>
 </html>
