--- a/BloggoFrontend/pages/notification.html
+++ b/BloggoFrontend/pages/notification.html
@@ -104,9 +104,13 @@
                 <img  class="profile-avatar mb-2" alt="Avatar">
 
                 <div class="d-flex align-items-center justify-content-center gap-2 mb-2">
+                    <span id="profile-status-dot"
+                          style="width:12px; height:12px; border-radius:50%; display:inline-block;"></span>
                     <h4 class="profile-name m-0"></h4>
                     <small class="text-muted"></small>
+
                 </div>
+
 
                 <p>
                     <a href="follow.html" class="text-decoration-none fw-semibold"> </a>
@@ -140,18 +144,6 @@
             <div class="card p-3 mb-3">
                 <h6 class="mb-3">Following</h6>
                 <ul class="list-unstyled following-list mb-0">
-                    <li class="d-flex align-items-center mb-2">
-                        <img  class="rounded-circle me-2" alt="">
-                        <span></span>
-                    </li>
-                    <li class="d-flex align-items-center mb-2">
-                        <img  class="rounded-circle me-2" alt="">
-                        <span></span>
-                    </li>
-                    <li class="d-flex align-items-center mb-2">
-                        <img  class="rounded-circle me-2" alt="">
-                        <span></span>
-                    </li>
                     <li>
                         <a href="follow.html" class="text-decoration-none">Loading...</a>
                     </li>
@@ -160,6 +152,8 @@
         </div>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1.5.1/dist/sockjs.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 
 <!-- SweetAlert2 JS -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -167,6 +161,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../js/notification.js"> </script>
 <script src="../js/profile.js"></script>
+<script src="../js/webSocket.js"></script>
 
 </body>
 </html>
